--- a/.env.example
+++ b/.env.example
@@ -16,17 +16,12 @@ LOG_LEVEL=debug
 
 # Database
 DB_CONNECTION=pgsql
-DB_HOST=pgsql
+DB_READ_HOST=
+DB_WRITE_HOST=
 DB_PORT=5432
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=root
-
-DB_TEST_HOST=pgsql_test
-DB_TEST_PORT=5432
-DB_TEST_DATABASE=laravel
-DB_TEST_USERNAME=root
-DB_TEST_PASSWORD=root
 
 # Broadcasting
 BROADCAST_DRIVER=null
