--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "korridor/laravel-model-validation-rules": "^3.0",
         "laravel/framework": "^12.19.3",
         "laravel/jetstream": "^5.0",
+        "laravel/nightwatch": "^1.11",
         "laravel/octane": "^2.3",
         "laravel/passport": "^13.0.5",
         "laravel/tinker": "^2.8",
