--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -38,7 +38,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.4'
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv
+          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, pdo_sqlite, pdo_pgsql, bcmath, soap, intl, gd, exif, iconv
           coverage: none
 
       - name: "Run composer install"
@@ -47,6 +47,10 @@ jobs:
       - name: "Prepare Laravel Application"
         run: |
           cp .env.ci .env
+          echo "DB_HOST=127.0.0.1" >> .env
+          echo "DB_READ_HOST=127.0.0.1" >> .env
+          echo "DB_WRITE_HOST=127.0.0.1" >> .env
+          sleep 10
           php artisan key:generate
           php artisan passport:keys
           php artisan migrate --seed
