--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,13 @@
-name: Playwright Tests
-on: [push]
+name: Playwright Tests (disabled)
+on:
+  push:
+    branches-ignore:
+      - '**'
 permissions:
   contents: read
 jobs:
   test:
+    if: false  # Temporarily disabled
     runs-on: ubuntu-latest
     timeout-minutes: 60
 
