--- a/.github/workflows/npm-format-check.yml
+++ b/.github/workflows/npm-format-check.yml
@@ -15,9 +15,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22.x'
+          cache: 'npm'
 
       - name: "Install npm dependencies"
-        run: npm ci
+        env:
+          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: '1'
+          npm_config_audit: 'false'
+          npm_config_fund: 'false'
+        run: npm ci --no-audit --no-fund --no-progress
 
       - name: "Check code formatting"
         run: npm run format:check
