--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -51,9 +51,14 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '22.x'
+          cache: 'npm'
 
       - name: "Install dependencies"
-        run: npm ci
+        env:
+          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: '1'
+          npm_config_audit: 'false'
+          npm_config_fund: 'false'
+        run: npm ci --no-audit --no-fund --no-progress
 
       - name: "Build Frontend"
         run: npm run build
